--- a/backend/brainoverflow/service_ucenter/Dockerfile
+++ b/backend/brainoverflow/service_ucenter/Dockerfile
@@ -2,7 +2,10 @@ FROM amazoncorretto:8
 
 MAINTAINER "Bohan Zhang"
 
-WORKDIR /usr/local/docker/service_ucenter
-ADD ./target/service_ucenter-0.0.1-SNAPSHOT.jar .
-CMD ["java", "-jar", "service_ucenter-0.0.1-SNAPSHOT.jar"]
+ENV TZ=Australia/Sydney
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+WORKDIR /usr/local/target/service_ucenter
+ADD ./target/service_ucenter-0.0.1-SNAPSHOT.jar app.jar
+CMD ["java", "-jar", "app.jar"]
 EXPOSE 8080
