--- a/backend/brainoverflow/service_ucenter/src/main/resources/application.yml
+++ b/backend/brainoverflow/service_ucenter/src/main/resources/application.yml
@@ -20,3 +20,28 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.gogohd.ucenter.controller
+
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://admin:ss981124@47.74.84.224:8761/eureka/
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port} #:${random.long(1,100)}
