--- a/backend/brainoverflow/service_gateway/src/main/resources/application.yml
+++ b/backend/brainoverflow/service_gateway/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 10900
 
 spring:
+  profiles:
+    active: prod
   application:
     name: service-gateway
   cloud:
@@ -16,16 +18,6 @@ spring:
             - Path=/service-ucenter/**
           filters:
             - StripPrefix=1
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://admin:ss981124@47.74.84.224:8761/eureka/
-      register-with-eureka: true
-      fetch-registry: true
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port} #:${random.long(1,100)}
 
 knife4j:
   gateway:
