--- a/backend/brainoverflow/service_ucenter/src/main/resources/application.yml
+++ b/backend/brainoverflow/service_ucenter/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 10910
 
 spring:
+  profiles:
+    active: prod
   application:
     name: service-ucenter
   datasource:
@@ -37,11 +39,3 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://admin:ss981124@47.74.84.224:8761/eureka/
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port} #:${random.long(1,100)}
