--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -34,6 +34,7 @@
         <knife4j.version>4.1.0</knife4j.version>
         <aliyun-core.version>4.6.3</aliyun-core.version>
         <aliyun-dm.version>3.3.2</aliyun-dm.version>
+        <aliyun-oss.version>3.16.3</aliyun-oss.version>
     </properties>
 
     <dependencyManagement>
@@ -107,6 +108,11 @@
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-dm</artifactId>
                 <version>${aliyun-dm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun-oss.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
