--- a/backend/brainoverflow/service_base/pom.xml
+++ b/backend/brainoverflow/service_base/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-dm</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
