--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -15,6 +15,7 @@
         <module>service_ucenter</module>
         <module>service_base</module>
         <module>service_gateway</module>
+        <module>service_eureka</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <name>brainoverflow</name>
