--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -23,6 +23,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-media-hook": "^0.5.0",
     "umi": "^3.5.41"
   },
   "devDependencies": {
