--- a/backend/brainoverflow/service_ucenter/src/main/resources/application.yml
+++ b/backend/brainoverflow/service_ucenter/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   profiles:
-    active: dev
+    active: prod
   application:
     name: service-ucenter
   datasource:
@@ -12,6 +12,17 @@ spring:
       url: jdbc:mysql://47.74.84.224:3306/brainoverflow?serverTimezone=Australia/Sydney&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: ss981124
+  redis:
+    host: 47.74.84.224
+    port: 6379
+    password: ss981124
+    database: 0
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
 
 mybatis-plus:
   configuration:
