--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -37,6 +37,11 @@
         <aliyun-core.version>4.6.3</aliyun-core.version>
         <aliyun-dm.version>3.3.2</aliyun-dm.version>
         <aliyun-oss.version>3.16.3</aliyun-oss.version>
+        <aliyun-vod.version>2.16.11</aliyun-vod.version>
+        <aliyun-vod-upload.version>1.4.15</aliyun-vod-upload.version>
+        <fastjson.version>1.2.68</fastjson.version>
+        <json.version>20170516</json.version>
+        <gson.version>2.8.9</gson.version>
     </properties>
 
     <dependencyManagement>
@@ -115,6 +120,31 @@
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>${aliyun-oss.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-sdk-vod-upload</artifactId>
+                <version>${aliyun-vod-upload.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-vod</artifactId>
+                <version>${aliyun-vod.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
