--- a/backend/brainoverflow/service_gateway/src/main/resources/application.yml
+++ b/backend/brainoverflow/service_gateway/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 10900
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 200MB
+      max-request-size: 200MB
   profiles:
     active: dev
   application:
