--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -24,6 +24,7 @@
     "react": "17.x",
     "react-dom": "17.x",
     "react-media-hook": "^0.5.0",
+    "react-player": "^2.12.0",
     "umi": "^3.5.41"
   },
   "devDependencies": {
