--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -39,6 +39,7 @@
         <aliyun-oss.version>3.16.3</aliyun-oss.version>
         <aliyun-vod.version>2.16.11</aliyun-vod.version>
         <aliyun-vod-upload.version>1.4.15</aliyun-vod-upload.version>
+        <aliyun-sts.version>3.1.1</aliyun-sts.version>
         <fastjson.version>1.2.68</fastjson.version>
         <json.version>20170516</json.version>
         <gson.version>2.8.9</gson.version>
@@ -145,6 +146,11 @@
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-vod</artifactId>
                 <version>${aliyun-vod.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-sts</artifactId>
+                <version>${aliyun-sts.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
