--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.x",
     "react-media-hook": "^0.5.0",
     "react-player": "^2.12.0",
+    "react-quill": "^2.0.0",
     "umi": "^3.5.41"
   },
   "devDependencies": {
