--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -17,6 +17,7 @@
         <module>service_gateway</module>
         <module>service_eureka</module>
         <module>service_edu</module>
+        <module>service_forum</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <name>brainoverflow</name>
