--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -42,6 +42,7 @@
         <aliyun-vod.version>2.16.11</aliyun-vod.version>
         <aliyun-vod-upload.version>1.4.15</aliyun-vod-upload.version>
         <aliyun-sts.version>3.1.1</aliyun-sts.version>
+        <aliyun-live.version>3.9.37</aliyun-live.version>
         <fastjson.version>1.2.68</fastjson.version>
         <json.version>20170516</json.version>
         <gson.version>2.8.9</gson.version>
@@ -153,6 +154,11 @@
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-sts</artifactId>
                 <version>${aliyun-sts.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-live</artifactId>
+                <version>${aliyun-live.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
