--- a/backend/brainoverflow/service_stream/pom.xml
+++ b/backend/brainoverflow/service_stream/pom.xml
@@ -59,6 +59,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-live</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
