--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -21,14 +21,20 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/sockjs-client": "^1.5.1",
+    "flv.js": "^1.6.2",
     "react": "17.x",
     "react-dom": "17.x",
     "react-media-hook": "^0.5.0",
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
+    "sockjs-client": "^1.6.1",
     "umi": "^3.5.41"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
