--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -30,6 +30,7 @@
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "umi": "^3.5.41"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.41",
+    "babel-loader": "^9.1.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
