--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@babel/plugin-transform-runtime": "^7.22.7",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/runtime-corejs3": "^7.22.6",
     "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.1",
     "flv.js": "^1.6.2",
@@ -41,6 +44,8 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.41",
     "babel-loader": "^9.1.3",
+    "customize-cra": "^1.0.0",
+    "less-loader": "^11.1.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
