--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -27,6 +27,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.1",
     "flv.js": "^1.6.2",
+    "rc-picker": "^3.11.0",
     "react": "17.x",
     "react-dom": "17.x",
     "react-media-hook": "^0.5.0",
