Chat with ChatGPT finished

--- a/backend/brainoverflow/pom.xml
+++ b/backend/brainoverflow/pom.xml
@@ -19,6 +19,7 @@
         <module>service_edu</module>
         <module>service_forum</module>
         <module>service_stream</module>
+        <module>service_chat</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <name>brainoverflow</name>
