finish student rank

--- a/frontend/myapp/tsconfig.json
+++ b/frontend/myapp/tsconfig.json
@@ -22,7 +22,7 @@
     "config/**/*",
     ".umirc.ts",
     "typings.d.ts"
-  ],
+, "component/studentrank.tsx"  ],
   "exclude": [
     "node_modules",
     "lib",
