--- a/backend/brainoverflow/service_chat/src/main/resources/application.yml
+++ b/backend/brainoverflow/service_chat/src/main/resources/application.yml
@@ -13,11 +13,11 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://47.74.84.224:3306/brainoverflow?serverTimezone=Australia/Sydney&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://${DATABASE_HOST}:3306/brainoverflow?serverTimezone=Australia/Sydney&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: ss981124
   redis:
-    host: 47.74.84.224
+    host: ${DATABASE_HOST}
     port: 6379
     password: ss981124
     database: 0
